--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,1 +1,5 @@
 blank_issues_enabled: false
+contact_links:
+  - name: OctoLab Community Support
+    url: https://octolab.slack.com/
+    about: Please ask and answer questions here.
