update config for ISSUE_TEMPLATE, review PULL_REQUEST_TEMPLATE

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,7 +4,7 @@ contact_links:
     url: https://docs.octolab.org/
     about: Please take a look at our documentation.
   - name: Questions
-    url: https://docs.octolab.org/discussions/
+    url: https://docs.octolab.org/faq/
     about: |
       If you have a question or are looking for advice,
       please post on our discussions forum!
